# ai-readme-generator

./: README.md  pyproject.toml
ai_readme_generator/: __init__.py
tests/: __init__.py  test_readme_generator.py
