[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-readme-generator"
version = "1.0.0"
description = "AI-powered README generator that creates project documentation from code analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["httpx>=0.27", "typer>=0.12", "rich>=13.0"]

[project.scripts]
ai-readme-generator = "ai_readme_generator:app"
